replace deprecated newCharacter with Character.valueOf()